--- a/postgresql.conf
+++ b/postgresql.conf
@@ -61,7 +61,7 @@ listen_addresses = '*'		# what IP address(es) to listen on;
 					# defaults to 'localhost'; use '*' for all
 					# (change requires restart)
 port = 5432				# (change requires restart)
-max_connections = 100			# (change requires restart)
+max_connections = 400			# (change requires restart)
 # Note:  Increasing max_connections costs ~400 bytes of shared memory per
 # connection slot, plus lock space (see max_locks_per_transaction).
 #superuser_reserved_connections = 3	# (change requires restart)
@@ -78,7 +78,7 @@ unix_socket_directories = '/var/run/postgresql'	# comma-separated list of direct
 # - Security and Authentication -
 
 #authentication_timeout = 1min		# 1s-600s
-#ssl = true				# (change requires restart)
+ssl = off				# (change requires restart)
 #ssl_ciphers = 'DEFAULT:!LOW:!EXP:!MD5:@STRENGTH'	# allowed SSL ciphers
 					# (change requires restart)
 #ssl_renegotiation_limit = 512MB	# amount of data between renegotiations
@@ -111,17 +111,17 @@ unix_socket_directories = '/var/run/postgresql'	# comma-separated list of direct
 
 # - Memory -
 
-shared_buffers = 128MB			# min 128kB
+shared_buffers = 2GB			# min 128kB
 					# (change requires restart)
 #temp_buffers = 8MB			# min 800kB
-#max_prepared_transactions = 0		# zero disables the feature
+max_prepared_transactions = 	100	# zero disables the feature
 					# (change requires restart)
 # Note:  Increasing max_prepared_transactions costs ~600 bytes of shared memory
 # per transaction slot, plus lock space (see max_locks_per_transaction).
 # It is not advisable to set max_prepared_transactions nonzero unless you
 # actively intend to use prepared transactions.
-#work_mem = 1MB				# min 64kB
-#maintenance_work_mem = 16MB		# min 1MB
+work_mem = 32MB				# min 64kB
+maintenance_work_mem = 128MB		# min 1MB
 #max_stack_depth = 2MB			# min 100kB
 
 # - Disk -
@@ -162,8 +162,8 @@ shared_buffers = 128MB			# min 128kB
 
 #wal_level = minimal			# minimal, archive, or hot_standby
 					# (change requires restart)
-#fsync = on				# turns forced synchronization on or off
-#synchronous_commit = on		# synchronization level;
+fsync = on				# turns forced synchronization on or off
+synchronous_commit = on		# synchronization level;
 					# off, local, remote_write, or on
 #wal_sync_method = fsync		# the default is the first option
 					# supported by the operating system:
@@ -173,7 +173,7 @@ shared_buffers = 128MB			# min 128kB
 					#   fsync_writethrough
 					#   open_sync
 #full_page_writes = on			# recover from partial page writes
-#wal_buffers = -1			# min 32kB, -1 sets based on shared_buffers
+wal_buffers = 16MB			# min 32kB, -1 sets based on shared_buffers
 					# (change requires restart)
 #wal_writer_delay = 200ms		# 1-10000 milliseconds
 
@@ -182,9 +182,9 @@ shared_buffers = 128MB			# min 128kB
 
 # - Checkpoints -
 
-#checkpoint_segments = 3		# in logfile segments, min 1, 16MB each
+checkpoint_segments = 32		# in logfile segments, min 1, 16MB each
 #checkpoint_timeout = 5min		# range 30s-1h
-#checkpoint_completion_target = 0.5	# checkpoint target duration, 0.0 - 1.0
+checkpoint_completion_target = 0.9	# checkpoint target duration, 0.0 - 1.0
 #checkpoint_warning = 30s		# 0 disables
 
 # - Archiving -
@@ -267,7 +267,7 @@ shared_buffers = 128MB			# min 128kB
 #cpu_tuple_cost = 0.01			# same scale as above
 #cpu_index_tuple_cost = 0.005		# same scale as above
 #cpu_operator_cost = 0.0025		# same scale as above
-#effective_cache_size = 128MB
+effective_cache_size = 4GB
 
 # - Genetic Query Optimizer -
 
@@ -533,7 +533,7 @@ default_text_search_config = 'pg_catalog.english'
 #------------------------------------------------------------------------------
 
 #deadlock_timeout = 1s
-#max_locks_per_transaction = 64		# min 10
+max_locks_per_transaction = 128	# min 10
 					# (change requires restart)
 # Note:  Each lock table slot uses ~270 bytes of shared memory, and there are
 # max_locks_per_transaction * (max_connections + max_prepared_transactions)
